k8s/minikube/postgres/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-api
  template:
    metadata:
      labels:
        app: postgres-api
        tier: backend
    spec:
      containers:
        - name: postgres-api
          image: postgres:12.1-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-api
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: postgres-api
          persistentVolumeClaim:
            claimName: postgres-api
