k8s/minikube/postgres/service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-api
  labels:
    app: postgres-api
spec:
  type: NodePort
  selector:
    app: postgres-api
  ports:
    - name: http
      protocol: TCP
      port: 5432
      targetPort: 5432
